Fix stretch bug with webkit

--- a/src/lumos.scss
+++ b/src/lumos.scss
@@ -62,6 +62,7 @@ img[data-action=lumos] {
 
     &-image {
         overflow: hidden;
+        object-fit: contain;
 
         max-width: 100%;
         width: auto;
